force-app/main/default/objects/Contact/fields/Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula__c</fullName>
    <formula>Account.Name</formula>
    <label>Account (Formula)</label>
    <type>Text</type>
</CustomField>