force-app/main/default/objects/Contact/fields/Contact_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Page_Link__c</fullName>
    <label>Contact Page Link</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>