force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Account.County_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>