force-app/main/default/objects/Contact/fields/CountyFormula__c.field-meta.xml
<CustomField>
    <fullName>CountyFormula__c</fullName>
    <formula>Account.County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory County</label>
    <type>Text</type>
</CustomField>