force-app/main/default/objects/Contact/fields/CRMG_WF__ActivitySubject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__ActivitySubject__c</fullName>
    <label>Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>