force-app/main/default/objects/Contact/fields/CRMG_WF__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>