force-app/main/default/objects/Contact/fields/CRMG_WF__Days_Before_Meeting__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Days_Before_Meeting__c</fullName>
    <formula>IF(
CRMG_WF__Next_Meeting_Date_Time__c  &gt; NOW(),
CRMG_WF__Next_Meeting_Date_Time__c - NOW(),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Before Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>