force-app/main/default/objects/Contact/fields/CRMG_WF__Hours_Before_Meeting__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Hours_Before_Meeting__c</fullName>
    <formula>IF(CRMG_WF__Difference_from_Now_and_Next_Meeting__c * 24 &gt; 0,CRMG_WF__Difference_from_Now_and_Next_Meeting__c * 24,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Before Meeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>