force-app/main/default/objects/Contact/fields/CRMG_WF__Last_Interaction_assigned_to__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Last_Interaction_assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Interaction assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>