force-app/main/default/objects/Contact/fields/CRMG_WF__Meeting_Date_del__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Meeting_Date_del__c</fullName>
    <label>Meeting Date</label>
    <type>DateTime</type>
</CustomField>