force-app/main/default/objects/Contact/fields/CRMG_WF__Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Meeting_Details__c</fullName>
    <label>Meeting Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>