force-app/main/default/objects/Contact/fields/CRMG_WF__Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>