force-app/main/default/objects/Contact/fields/CRMG_WF__Meeting_Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Meeting_Subject__c</fullName>
    <label>Meeting Subject</label>
    <type>TextArea</type>
</CustomField>