force-app/main/default/objects/Contact/fields/CRMG_WF__Minutes_Before_Meeting__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Minutes_Before_Meeting__c</fullName>
    <formula>IF(CRMG_WF__Hours_Before_Meeting__c * 60 &gt; 0,CRMG_WF__Hours_Before_Meeting__c * 60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Before Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>