force-app/main/default/objects/Contact/fields/DoNotEmail__c.field-meta.xml
<CustomField>
    <fullName>DoNotEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact/Lead should not receive any emails (Marketing or via Outlook)</inlineHelpText>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>