force-app/main/default/objects/Contact/fields/InforCRM_Accout_ID__c.field-meta.xml
<CustomField>
    <fullName>InforCRM_Accout_ID__c</fullName>
    <label>Infor CRM Accout ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>