force-app/main/default/objects/Contact/fields/InforCRM_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>InforCRM_Contact_ID__c</fullName>
    <label>InforCRM Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>