force-app/main/default/objects/Contact/fields/LinkedIn_Profile_Page__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_Page__c</fullName>
    <label>LinkedIn Profile Page</label>
    <type>Url</type>
</CustomField>