force-app/main/default/objects/Contact/fields/Name_Listed_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Name_Listed_on_Website__c</fullName>
    <label>Name Listed on Website</label>
    <type>TextArea</type>
</CustomField>