force-app/main/default/objects/Contact/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account (Lookup)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts of Child Accounts</relationshipLabel>
    <relationshipName>ChildAccountContacts</relationshipName>
    <type>Lookup</type>
</CustomField>