force-app/main/default/objects/Contact/fields/Sandbox_contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_contact_ID__c</fullName>
    <label>Sandbox contact ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>