force-app/main/default/objects/Contact/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <formula>IF( Account.RecordType.DeveloperName = &apos;District&apos; || Account.RecordType.DeveloperName = &apos;Other&apos;,
    Account.Name,
    IF ( Account.RecordType.DeveloperName = &apos;Public_School&apos; || Account.RecordType.DeveloperName = &apos;Private_School&apos;,
         Account.Parent.Name,
         &apos;&apos;))</formula>
    <label>School District</label>
    <type>Text</type>
</CustomField>