force-app/main/default/objects/Contact/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <formula>IF( Account.RecordType.DeveloperName = &apos;Public_School&apos; || Account.RecordType.DeveloperName = &apos;Private_School&apos;,
    Account.Name,
    &apos;&apos;)</formula>
    <label>School Name</label>
    <type>Text</type>
</CustomField>