force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
                <isActive>false</isActive>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Pipeline</fullName>
                <isActive>false</isActive>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Pre-Pipeline</fullName>
                <isActive>false</isActive>
                <label>Pre-Pipeline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>