force-app/main/default/objects/Contact/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <formula>Account.Territory_Name__r.Name</formula>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>