force-app/main/default/objects/Contact/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <label>Twitter Handle</label>
    <type>Url</type>
</CustomField>