force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccessEquity</fullName>
            </value>
            <value>
                <fullName>Billing/DualLang</fullName>
            </value>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Dist Ldrshp</fullName>
            </value>
            <value>
                <fullName>ELL</fullName>
            </value>
            <value>
                <fullName>ELLs</fullName>
            </value>
            <value>
                <fullName>EarlyChldhd</fullName>
            </value>
            <value>
                <fullName>ExpLrng</fullName>
            </value>
            <value>
                <fullName>FedProg/TItle I</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>SpecEd</fullName>
            </value>
            <value>
                <fullName>Turnaround</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>