force-app/main/default/objects/Contact/listViews/AM_Andy_Lowrey.listView-meta.xml
<ListView>
    <fullName>AM_Andy_Lowrey</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>equals</operation>
        <value>Andy Lowrey</value>
    </filters>
    <label>AM - Andy Lowrey</label>
</ListView>