force-app/main/default/objects/Contact/listViews/AM_Dan_Herbst.listView-meta.xml
<ListView>
    <fullName>AM_Dan_Herbst</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>equals</operation>
        <value>Dan Herbst</value>
    </filters>
    <label>AM - Dan Herbst</label>
</ListView>