force-app/main/default/objects/Contact/listViews/AM_Gloria_Acey_Davis.listView-meta.xml
<ListView>
    <fullName>AM_Gloria_Acey_Davis</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>contains</operation>
        <value>Gloria</value>
    </filters>
    <label>AM - Gloria Acey-Davis</label>
</ListView>