force-app/main/default/objects/Contact/listViews/AM_Jeannie_Cassidy.listView-meta.xml
<ListView>
    <fullName>AM_Jeannie_Cassidy</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>equals</operation>
        <value>Jeannie Cassidy</value>
    </filters>
    <label>AM - Jeannie Cassidy</label>
</ListView>