force-app/main/default/objects/Contact/listViews/AM_Karen_Wendlandt.listView-meta.xml
<ListView>
    <fullName>AM_Karen_Wendlandt</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>equals</operation>
        <value>Karen Wendlandt</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>Dual</value>
    </filters>
    <label>AM - Karen Wendlandt</label>
</ListView>