force-app/main/default/objects/Contact/listViews/AM_Kelley_Stacy.listView-meta.xml
<ListView>
    <fullName>AM_Kelley_Stacy</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Rep_Name__c</field>
        <operation>equals</operation>
        <value>Kelley Stacy</value>
    </filters>
    <label>AM - Kelley Stacy</label>
</ListView>