force-app/main/default/objects/Contact/listViews/AM_Ketesha_Melendez.listView-meta.xml
<ListView>
    <fullName>AM_Ketesha_Melendez</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AM__c</field>
        <operation>equals</operation>
        <value>Ketesha Melendez</value>
    </filters>
    <label>AM - Ketesha Melendez</label>
</ListView>